--- a/catalog/anime/Kimi-no-Na-wa/movie/index.html
+++ b/catalog/anime/Kimi-no-Na-wa/movie/index.html
@@ -1,2 +1,2 @@
-<iframe width=640 height=250 src=https://video.sibnet.ru/shell.php?videoid=4754278&share=1></iframe>
+<iframe width=100% height=250 src=https://video.sibnet.ru/shell.php?videoid=4754278&share=1></iframe>
 <h3>Сенің есімің</h3>
