--- a/app/help.html
+++ b/app/help.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/4.7.95/css/materialdesignicons.css">
             <link rel="stylesheet" href="styles-dark.css">
-        <title>Вопросы об Anixart</title>
+        <title>UNEL TV туралы сұрақтар</title>
     <script type="text/javascript">
         ! function(e, a, t, n, c, r, i) {
             e[c] = e[c] || function() {
