--- a/app/application/help-center/support.html
+++ b/app/application/help-center/support.html
@@ -46,7 +46,10 @@
     <input type="checkbox" checked>
     <i></i>
     <h2>Неге қосымша кейде жұмыс жасамай қалады? Мысалға шығып кете береді?</h2>
-    <p>Бізде бұл қателіктің екі типі бар. 1-ші қателік бұл Техникалық ақауларға байланысты, мысалға сервер кодтары бірден өзгеріп серверді істен шығарады, бұл проблеманы администраторлар 3 немесе 5минут ішінде шешеді, 2-ші проблема бұл жаңартуға байланысты, кейде қосымшаға жаңа жаңарту шыққан кезде біз ескі серверді тоқтауға мәжбүр боламыз осы себептіде қосымша жұмыс жасауын тоқтады бұндай кезде біздің беретін кеңесіміз қосымшаны жаңа нұсқаға жаңартыңыз.</p>
+    <p>Бізде бұл қателіктің екі типі бар.
+• 1-ші қателік бұл Техникалық ақауларға байланысты, мысалға сервер кодтары бірден өзгеріп серверді істен шығарады, бұл проблеманы администраторлар 3 немесе 5минут ішінде шешеді.
+
+• 2-ші проблема бұл жаңартуға байланысты, кейде қосымшаға жаңа жаңарту шыққан кезде біз ескі серверді тоқтауға мәжбүр боламыз осы себептіде қосымша жұмыс жасауын тоқтады бұндай кезде біздің беретін кеңесіміз қосымшаны жаңа нұсқаға жаңартыңыз.</p>
   </li>
 </ul>
 <!-- partial -->
