--- a/app/application/help-center/support.html
+++ b/app/application/help-center/support.html
@@ -25,13 +25,13 @@
                                 <div class="card-header" id="faqHeading-1">
                                     <div class="mb-0">
                                         <h5 class="faq-title" data-toggle="collapse" data-target="#faqCollapse-1" data-aria-expanded="true" data-aria-controls="faqCollapse-1">
-                                            <span class="badge">1</span>What is Lorem Ipsum?
+                                            <span class="badge">1</span> Неге аниме немесе дорамалардың сапасы әртүрлі?
                                         </h5>
                                     </div>
                                 </div>
                                 <div id="faqCollapse-1" class="collapse" aria-labelledby="faqHeading-1" data-parent="#accordion">
                                     <div class="card-body">
-                                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+                                        <p>Ия қазіргі таңда бұл біздің басты проблемалардың бірі, кейбір аниме немесе дорамалардың сапасы жоғары болса ал кейбіреулерінің сапасы өте нашар, себебіне келетін болсақ біз аниме немесе дорама бөлімдерін әртүрлі сайттардан аламыз мысалға ок.ру, вк.ру, телеграм, пиратты сайттар, осы себептіде контенттердің сапасы әртүрлі.</p>
                                     </div>
                                 </div>
                             </div>
@@ -39,13 +39,13 @@
                                 <div class="card-header" id="faqHeading-2">
                                     <div class="mb-0">
                                         <h5 class="faq-title" data-toggle="collapse" data-target="#faqCollapse-2" data-aria-expanded="false" data-aria-controls="faqCollapse-2">
-                                            <span class="badge">2</span> Where does it come from?
+                                            <span class="badge">2</span> Неге кейбір аниме немесе дорама бөлімдерінде кірістірілген бейне ойнатқыш жұмыс жасамайды?
                                         </h5>
                                     </div>
                                 </div>
                                 <div id="faqCollapse-2" class="collapse" aria-labelledby="faqHeading-2" data-parent="#accordion">
                                     <div class="card-body">
-                                        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                                        <p>Кейбір аниме немесе дорама бөлімдерінің бейнесіне апаратын тікелей сілтемелер қолжетімсіз болып келеді мысалға вк.ру немесе ок.ру сайттары, ол жерден бейнеге тікелей апаратын сілтемелерді алу өте қиын осы себептіде кейбір контенттердің бейнесін кірістірілген бейне ойнатқышта жұмыс жасамайды.</p>
                                     </div>
                                 </div>
                             </div>
@@ -53,13 +53,13 @@
                                 <div class="card-header" id="faqHeading-3">
                                     <div class="mb-0">
                                         <h5 class="faq-title" data-toggle="collapse" data-target="#faqCollapse-3" data-aria-expanded="false" data-aria-controls="faqCollapse-3">
-                                            <span class="badge">3</span>Why do we use it?
+                                            <span class="badge">3</span> Менің құрылғымның антивирусы (Avast) сіздердің қосымшаларыңызды троян ретінде көреді, неге?
                                         </h5>
                                     </div>
                                 </div>
                                 <div id="faqCollapse-3" class="collapse" aria-labelledby="faqHeading-3" data-parent="#accordion">
                                     <div class="card-body">
-                                        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here.</p>
+                                        <p>Біздің қосымшада ешқандай вирус немесе троян жоқ! Avast антивирусы біздің қосымшаға проверка жасағанда TYPE_TROJAN деген файлды табады, ал шын мәнінде біздің қосымшада бұндай файл мүлдем жоқ, ал сұраққа оралатын болсақ антивирус неүшін қосымшаны троян ретінде көреді? Өйткені біздің қосымшада авто-жаңартқыш функциясы бар, бұл не? Авто-жаңарту - бұл қосымшаның соңғы нұсқасы шыққаннын немесе шықпағанын тексеретін жүйе, бұл жүйе 24 сағат бойы UNEL TV қосымшаның нұсқасын (версия) және пакетін тексеріп отырады, егерде қосымшаға қандай да бір жаңа жаңарту шықса онда жүйе сізге қосымшаның жаңа жаңартуы яғни соңғы нұсқасы (версия) шыққаны тұралы хабарлама береді.</p>
                                     </div>
                                 </div>
                             </div>
@@ -67,13 +67,13 @@
                                 <div class="card-header" id="faqHeading-4">
                                     <div class="mb-0">
                                         <h5 class="faq-title" data-toggle="collapse" data-target="#faqCollapse-4" data-aria-expanded="false" data-aria-controls="faqCollapse-4">
-                                            <span class="badge">4</span> Where can I get some?
+                                            <span class="badge">4</span> Неге кейбір аниме немесе дорама  сипаттамасы орысша тілде жазылған?
                                         </h5>
                                     </div>
                                 </div>
                                 <div id="faqCollapse-4" class="collapse" aria-labelledby="faqHeading-4" data-parent="#accordion">
                                     <div class="card-body">
-                                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                                        <p>Біз сипаттама деген секілді ақпараттарды әртүрлі әлеуметтік желілер ден аламыз, егерде әлеуметтік желілерде сипаттама қазақша аудармада болмаса біз орысша аудармасын қоямыз!</p>
                                     </div>
                                 </div>
                             </div>
@@ -81,13 +81,13 @@
                                 <div class="card-header" id="faqHeading-5">
                                     <div class="mb-0">
                                         <h5 class="faq-title" data-toggle="collapse" data-target="#faqCollapse-5" data-aria-expanded="false" data-aria-controls="faqCollapse-5">
-                                            <span class="badge">5</span> What is Lorem Ipsum?
+                                            <span class="badge">5</span>Мен аниме немесе дорама бөлімдерін өз құрылғыма жүктей аламын ба?
                                         </h5>
                                     </div>
                                 </div>
                                 <div id="faqCollapse-5" class="collapse" aria-labelledby="faqHeading-5" data-parent="#accordion">
                                     <div class="card-body">
-                                        <p> It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing</p>
+                                        <p>Біз қазіргі таңда аниме немесе дорама бөлімдерін жүктеу үшін жаңа функция жасап жатырмыз жақын арада дайын болады.🙃</p>
                                     </div>
                                 </div>
                             </div>
@@ -95,27 +95,15 @@
                                 <div class="card-header" id="faqHeading-6">
                                     <div class="mb-0">
                                         <h5 class="faq-title" data-toggle="collapse" data-target="#faqCollapse-6" data-aria-expanded="false" data-aria-controls="faqCollapse-6">
-                                            <span class="badge">6</span> Where does it come from?
+                                            <span class="badge">6</span> Неге қосымша кейде жұмыс жасамай қалады? Мысалға шығып кете береді?
                                         </h5>
                                     </div>
                                 </div>
                                 <div id="faqCollapse-6" class="collapse" aria-labelledby="faqHeading-6" data-parent="#accordion">
                                     <div class="card-body">
-                                        <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="card-header" id="faqHeading-7">
-                                    <div class="mb-0">
-                                        <h5 class="faq-title" data-toggle="collapse" data-target="#faqCollapse-7" data-aria-expanded="false" data-aria-controls="faqCollapse-7">
-                                            <span class="badge">7</span> Why do we use it?
-                                        </h5>
-                                    </div>
-                                </div>
-                                <div id="faqCollapse-7" class="collapse" aria-labelledby="faqHeading-7" data-parent="#accordion">
-                                    <div class="card-body">
-                                        <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+                                        <p>Бізде бұл қателіктің екі типі бар.
+• 1-ші қателік бұл Техникалық ақауларға байланысты, мысалға сервер кодтары бірден өзгеріп серверді істен шығарады, бұл проблеманы администраторлар 3 немесе 5минут ішінде шешеді.
+• 2-ші проблема бұл жаңартуға байланысты, кейде қосымшаға жаңа жаңарту шыққан кезде біз ескі серверді тоқтауға мәжбүр боламыз осы себептіде қосымша жұмыс жасауын тоқтады бұндай кезде біздің беретін кеңесіміз қосымшаны жаңа нұсқаға жаңартыңыз.</p>
                                     </div>
                                 </div>
                             </div>
