--- a/app/application/help-center/support.html
+++ b/app/application/help-center/support.html
@@ -104,6 +104,20 @@
                                         <p>Бізде бұл қателіктің екі типі бар.
 • 1-ші қателік бұл Техникалық ақауларға байланысты, мысалға сервер кодтары бірден өзгеріп серверді істен шығарады, бұл проблеманы администраторлар 3 немесе 5минут ішінде шешеді.
 • 2-ші проблема бұл жаңартуға байланысты, кейде қосымшаға жаңа жаңарту шыққан кезде біз ескі серверді тоқтауға мәжбүр боламыз осы себептіде қосымша жұмыс жасауын тоқтады бұндай кезде біздің беретін кеңесіміз қосымшаны жаңа нұсқаға жаңартыңыз.</p>
+<div class="card">
+                                <div class="card-header" id="faqHeading-7">
+                                    <div class="mb-0">
+                                        <h5 class="faq-title" data-toggle="collapse" data-target="#faqCollapse-7" data-aria-expanded="false" data-aria-controls="faqCollapse-5">
+                                            <span class="badge">5</span>Неге қосымшада «N» дыбыстамасы жоқ?
+                                        </h5>
+                                    </div>
+                                </div>
+                                <div id="faqCollapse-5" class="collapse" aria-labelledby="faqHeading-7" data-parent="#accordion">
+                                    <div class="card-body">
+                                        <p>Біз серверге кез келген қазақша дыбыстамадығы аниме/дорамаларды қоса бермейміз, біздің талаптар бойынша Дыбыстама сапасы жақсы болуы қажет</p>
+                                    </div>
+                                </div>
+                            </div>
                                     </div>
                                 </div>
                             </div>
